[project]
name = "mule"
version = "2025.10.1"
description = "API for interacting with UM output files"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cpplint == 2.0.2",
    "ruff == 0.12.1",
    "shellcheck-py == 0.10.0.1",
    "sphinx == 8.2.3",
    "sphinx-lint == 1.0.0",
    "pydata-sphinx-theme == 0.16.1",
    "sphinx-design == 0.6.1",
    "sphinx-copybutton == 0.5.2",
    "sphinx-lint == 1.0.0",
    "sphinx-sitemap == 2.8.0",
    "sphinxcontrib-svg2pdfconverter == 1.3.0",
    "numpy == 2.3.3",
    "six == 1.17.0",
    "pillow == 11.3.0",
]
